--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </nav>
         </header>
 
-    <div class="container">    
+    <div class="container-index">    
 
         <main>
             <h2 class="subtitulo">un poco de historia</h2>
@@ -43,19 +43,19 @@
 
             <div class="fotos">
                 <img src="/img/cactus1.jpg" alt="" class="foto1" width="100" height="100">
-                <p class="pfoto1">Lorem ipsum dolor sit amet.</p>
+                <p class="pfoto">Pinches.</p>
             </div>
             <div class="fotos">
                 <img src="/img/muchocactus.jpg" alt="" class="foto2" width="100" height="100">
-                <p class="pfoto2">Lorem ipsum dolor sit amet.</p>
+                <p class="pfoto">Muchos cactus.</p>
             </div>
             <div class="fotos">
                 <img src="/img/cactus-3809018_1920.jpg" alt="" class="foto3" width="100" height="100">
-                <p class="pfoto3">Lorem ipsum dolor sit amet.</p>
+                <p class="pfoto">Cactus.</p>
             </div>
             <div class="fotos">
                 <img src="/img/muchasuculentas.jpg" alt="" class="foto4" width="100" height="100">
-                <p class="pfoto4">Lorem ipsum dolor sit amet.</p>
+                <p class="pfoto">Muchas suculentas.</p>
             </div>
         
 
