--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -31,7 +31,7 @@
             </ul>
         </nav>
     </header>
-    <main>
+    <main class="contacto">
         <form action="">
             <h2>Contacto</h2>
             <input type="text" name="Nombre y Apellido" placeholder="Ingresa tu Nombre y Apellido">
@@ -41,6 +41,7 @@
             <input type="button" id="boton" value="Enviar">
 
         </form>  
+                
     </main>
 
     <footer>
