--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -30,6 +30,10 @@
         </nav>
     </header>
 
+    <main>
+        
+    </main>
+
 
     <footer>
         <h2>Todos los derechos reservados</h2>
