--- a/pages/especies.html
+++ b/pages/especies.html
@@ -80,8 +80,14 @@
     </main>
 
 
-    <footer>
-        <h2>Todos los derechos reservados</h2>
+    <footer class="container-fluid">
+        <div class="row">
+            <h5 class="col-6">Todos los derechos reservados</h5>
+            <a href="#instagram" class="col-1"><img src="../img/instagram32 .png" alt=""></a>
+            <a href="#instagram" class="col-1"><img src="../img/face32.png" alt=""></a>
+            <a href="#instagram" class="col-1"><img src="../img/tweeter32.png" alt=""></a>
+            <a href="#instagram" class="col-1"><img src="../img/youtube32 .png" alt=""></a>
+        </div>
     </footer>
     
     <!-- JavaScript Bundle with Popper -->
