--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -14,6 +14,9 @@
     font-family: 'Roboto', sans-serif;
     font-family: 'Uchen', serif;-->
 
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+
     <link rel="stylesheet" href="/css/estilos.css">
 
     <title>Contacto</title>
@@ -44,8 +47,14 @@
                 
     </main>
 
-    <footer>
-        <h2>Todos los derechos reservados</h2>
+    <footer class="container-fluid">
+        <div class="row">
+            <h5 class="col-4">Todos los derechos reservados</h5>
+            <a href="#instagram" class="col-2"><img src="../img/instagram32 .png" alt=""></a>
+            <a href="#instagram" class="col-2"><img src="../img/face32.png" alt=""></a>
+            <a href="#instagram" class="col-2"><img src="../img/tweeter32.png" alt=""></a>
+            <a href="#instagram" class="col-2"><img src="../img/youtube32 .png" alt=""></a>
+        </div>
     </footer>
 
     
