--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -12,7 +12,9 @@
         font-family: 'Mouse Memoirs', sans-serif;
         font-family: 'Roboto', sans-serif;
         font-family: 'Uchen', serif;-->
-    
+        <!-- CSS only -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+
         <link rel="stylesheet" href="/css/estilos.css">
         <title>Pagina de Inicio</title>
     </head>
@@ -35,8 +37,14 @@
     </main>
 
 
-    <footer>
-        <h2>Todos los derechos reservados</h2>
+    <footer class="container-fluid">
+        <div class="row">
+            <h5 class="col-6">Todos los derechos reservados</h5>
+            <a href="#instagram" class="col-1"><img src="../img/instagram32 .png" alt=""></a>
+            <a href="#instagram" class="col-1"><img src="../img/face32.png" alt=""></a>
+            <a href="#instagram" class="col-1"><img src="../img/tweeter32.png" alt=""></a>
+            <a href="#instagram" class="col-1"><img src="../img/youtube32 .png" alt=""></a>
+        </div>
     </footer>
     
 </body>
