aplicando bootstrap a especies.html

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -22,6 +22,7 @@
     <title>Contacto</title>
 </head>
 <body>
+    <div class="container">
     <header>
         <h1>Mundo Suculenta</h1>
         <nav>
@@ -56,7 +57,7 @@
             <a href="#instagram" class="col-2"><img src="../img/youtube32 .png" alt=""></a>
         </div>
     </footer>
-
+    </div>
     
 </body>
 </html>
