--- a/pages/cuidado.html
+++ b/pages/cuidado.html
@@ -20,6 +20,7 @@
         <title>Pagina de Inicio</title>
     </head>
 <body>
+    <div class="container">
     <header>
         <h1>Mundo Suculenta</h1>
         <nav>
@@ -43,6 +44,6 @@
             <a href="#instagram" class="col-1"><img src="../img/youtube32 .png" alt=""></a>
         </div>
     </footer>
-    
+    </div>
 </body>
 </html>
