--- a/pages/cuidado.html
+++ b/pages/cuidado.html
@@ -16,7 +16,7 @@
         <!-- CSS only -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     
-        <link rel="stylesheet" href="/css/estilos.css">
+        <link rel="stylesheet" href="../css/estilos.css">
         <title>Pagina de Inicio</title>
     </head>
 <body>
@@ -25,11 +25,11 @@
         <h1>Mundo Suculenta</h1>
         <nav>
             <ul>
-                <li><a href="/index.html">Inicio</a></li>
-                <li><a href="/pages/nosotros.html">Nosotros</a></li>
-                <li><a href="/pages/especies.html">Especies</a></li>
-                <li><a href="/pages/cuidado.html">Cuidado</a></li>
-                <li><a href="/pages/contacto.html">Contacto</a></li>
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="nosotros.html">Nosotros</a></li>
+                <li><a href="especies.html">Especies</a></li>
+                <li><a href="cuidado.html">Cuidado</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
