--- a/pages/especies.html
+++ b/pages/especies.html
@@ -17,50 +17,50 @@
         <!-- CSS only -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     
-        <link rel="stylesheet" href="/css/estilos.css">
+        <link rel="stylesheet" href="../css/estilos.css">
         <title>Pagina de Inicio</title>
     </head>
 <body>
     <div class="container">
         <header >
             <h1 class="bg-titulo1" >Mundo Suculenta</h1>
-            <nav class="navbar navbar-expand-lg bg-menu">
+            <nav class="navbar navbar-expand-lg bg-menu ">
                 <div class="container-fluid">
-                    <a class="navbar-brand tx-inicio" href="/index.html">Inicio</a>
+                    <a class="navbar-brand tx-inicio" href="../index.html">Inicio</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon "></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
                             <li class="nav-item ">
-                            <a class="nav-link color2" aria-current="page" href="/pages/nosotros.html">Nosotros</a>
+                            <a class="nav-link color2" aria-current="page" href="nosotros.html">Nosotros</a>
                             </li>
                             <li class="nav-item">
-                            <a class="nav-link color2" href="/pages/especies.html">Especies</a>
+                            <a class="nav-link color2" href="especies.html">Especies</a>
                             </li>
                             <li class="nav-item">
-                            <a class="nav-link color2" href="/pages/cuidado.html">Cuidados</a>
+                            <a class="nav-link color2" href="cuidado.html">Cuidados</a>
                             </li>
                             <li class="nav-item">
-                            <a class="nav-link color2" href="/pages/contacto.html">Contacto</a>
+                            <a class="nav-link color2" href="contacto.html">Contacto</a>
                             </li>
-                    </ul>
+                        </ul>
                     
                     </div>
                 </div>
             </nav>
         </header>
 
-    <main class="container-main text-center">
-        <h1 class="bg-titulo2">Especies de Suculentas</h1>
-        <div class="row">
-            <div class="col-sm-12">
-                <h2 class="bg-subtitulo">¿Qué son las plantas suculentas?</h2>
-                <p class="psubt"> Las plantas suculentas, crasas o carnosas destacan por ser especialmente        numerosas.         Actualmente existen más de 8000 especies reconocidas.
-                Su característica principal es que almacenan más agua, principalmente en el tallo, las hojas o las raíces, a diferencia del resto de plantas. Eso provoca que sus tejidos se engrosen, es decir, aumenten su tamaño. Esta característica hace que tengan una mejor adaptación a lugares en los que otros tipos de plantas no resistirían.
-                Al margen de ser más resistentes a la escasez de agua, tienen la piel más dura y su floración es más corta. Además de tener estas capacidades, las plantas suculentas destacan por su inmensa variedad de formas, colores y por unos cuidados muy sencillos, de los que hablaremos al final del artículo.</p>
-            </div>
-        </div>    
+        <main class="container-main text-center">
+            <h1 class="bg-titulo2">Especies de Suculentas</h1>
+            <div class="row">
+                <div class="col-sm-12">
+                    <h2 class="bg-subtitulo">¿Qué son las plantas suculentas?</h2>
+                    <p class="psubt"> Las plantas suculentas, crasas o carnosas destacan por ser especialmente        numerosas.         Actualmente existen más de 8000 especies reconocidas.
+                    Su característica principal es que almacenan más agua, principalmente en el tallo, las hojas o las raíces, a diferencia del resto de plantas. Eso provoca que sus tejidos se engrosen, es decir, aumenten su tamaño. Esta característica hace que tengan una mejor adaptación a lugares en los que otros tipos de plantas no resistirían.
+                    Al margen de ser más resistentes a la escasez de agua, tienen la piel más dura y su floración es más corta. Además de tener estas capacidades, las plantas suculentas destacan por su inmensa variedad de formas, colores y por unos cuidados muy sencillos, de los que hablaremos al final del artículo.</p>
+                </div>
+            </div>    
 
         <div class="row">
             <div class="col-sm-6 tx-img">
@@ -101,7 +101,7 @@
         </div>
 
 
-    </main>
+        </main>
 
 
     <footer class="container-fluid">
