--- a/pages/especies.html
+++ b/pages/especies.html
@@ -66,14 +66,14 @@
             <div class="col-sm-6 tx-img">
                 <h3 class="h3">Aizoáceas</h3>
 
-                <img src="/img/aizoacea.png" alt="" >
+                <img src="../img/aizoacea.png" alt="" >
                 <P class="pint">El primero de los tipos de plantas suculentas que vamos a mostrarte son las aizoáceas. Se adaptan estupendamente en zonas desérticas y casi todas sus especies carecen de hojas o su tamaño es pequeño, al igual que sus pétalos.
                 Esta es una adaptación precisa para evitar un exceso de transpiración. Esta familia habita en zonas desérticas de Australia y Sudáfrica y comprende unas 2.000 especies</P>
                 
             </div>
             <div class="col-sm-6 tx-img">
                 <h3 class="h3">Agaváceas</h3>
-                <img src="/img/agavacea.png" alt="">
+                <img src="../img/agavacea.png" alt="">
                 <p class="pint">Se trata de una de las familias más conocidas de las plantas crasas o suculentas y las encontramos principalmente en las zonas áridas de México y en el continente americano. Existen alrededor de 300 especies.
                 Este tipo de planta crasa destaca por el gran tamaño de sus hojas puntiagudas en la gran mayoría de casos, además, suelen ser de color verde y de textura fibrosa.
                 Podemos encontrar agaváceas, que son arbustos como las yucas, aunque la más popular es el agave, del cual se elabora el mezcal y el tequila.</p>
@@ -83,7 +83,7 @@
         <div class="row">
             <div class="col-sm-6 tx-img">
                 <h3 class="h3">Cactáceas</h3>
-                <img src="/img/cactacea.png" alt="">
+                <img src="../img/cactacea.png" alt="">
                 <p class="pint">Conocidos popularmente como <strong>«cactus»</strong> .  Destacan por tener espinas que protegen las partes blandas de depredadores y reducen la transpiración.
                 La mayor parte de los cactus habitan en zonas áridas o con poca humedad. Son muy resistentes. Pese a estar rodeados de espinas y crecer en entornos hostiles para la vida, la gran mayoría luce una preciosa y espectacular floración, además de ser perfectos en ámbitos de jardinería decorativa.
                 Los cactus también se usa como alimento, cosmética y medicina. Existen unas 1.300 especies de cactus distintos.
@@ -92,7 +92,7 @@
             </div>
             <div class="col-sm-6 tx-img">
                 <h3 class="h3">Crasuláceas</h3>
-                <img src="/img/crasulaceas.png" alt="">
+                <img src="../img/crasulaceas.png" alt="">
                 <p class="pint">Cuenta con 1300 especies, casi todas herbáceas o arbustos. Se extienden por todas las partes del mundo, especialmente en zonas secas. Es uno de los tipos de plantas suculentas más fáciles de cultivar y sus distintos tipos de hojas son de lo más curioso. También destacan por la facilidad de reproducción mediante esquejes.</p>
                 
             </div>
