--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Inicio</a></li>
-                    <li><a href="./pages/nosotros.html">Nosotros</a></li>
-                    <li><a href="./pages/especies.html">Especies</a></li>
-                    <li><a href="./pages/cuidado.html">Cuidado</a></li>
-                    <li><a href="./pages/contacto.html">Contacto</a></li>
+                    <li><a href="pages/nosotros.html">Nosotros</a></li>
+                    <li><a href="pages/especies.html">Especies</a></li>
+                    <li><a href="pages/cuidado.html">Cuidado</a></li>
+                    <li><a href="pages/contacto.html">Contacto</a></li>
                 </ul>
             </nav>
         </header>
@@ -51,19 +51,19 @@
         </main>
 
             <div class="foto1">
-                <img src="/img/cactus1.jpg" alt="" class="foto1" width="100" height="100">
+                <img src="../img/cactus1.jpg" alt="" class="foto1" width="100" height="100">
                 <p class="pfoto">Pinches.</p>
             </div>
             <div class="foto2">
-                <img src="/img/muchocactus.jpg" alt="" class="foto2" width="100" height="100">
+                <img src="../img/muchocactus.jpg" alt="" class="foto2" width="100" height="100">
                 <p class="pfoto">Muchos cactus.</p>
             </div>
             <div class="foto3">
-                <img src="/img/cactus-3809018_1920.jpg" alt="" class="foto3" width="100" height="100">
+                <img src="../img/cactus-3809018_1920.jpg" alt="" class="foto3" width="100" height="100">
                 <p class="pfoto">Cactus.</p>
             </div>
             <div class="foto4">
-                <img src="/img/muchasuculentas.jpg" alt="" class="foto4" width="100" height="100">
+                <img src="../img/muchasuculentas.jpg" alt="" class="foto4" width="100" height="100">
                 <p class="pfoto">Muchas suculentas.</p>
             </div>
         
@@ -75,10 +75,10 @@
     <footer class="container-fluid">
         <div class="row">
             <h5 class="col-6">Todos los derechos reservados</h5>
-            <a href="#instagram" class="col-1"><img src="img/instagram32 .png" alt=""></a>
-            <a href="#instagram" class="col-1"><img src="img/face32.png" alt=""></a>
-            <a href="#instagram" class="col-1"><img src="img/tweeter32.png" alt=""></a>
-            <a href="#instagram" class="col-1"><img src="img/youtube32 .png" alt=""></a>
+            <a href="#instagram" class="col-1"><img src="../img/instagram32 .png" alt=""></a>
+            <a href="#instagram" class="col-1"><img src="../img/face32.png" alt=""></a>
+            <a href="#instagram" class="col-1"><img src="../img/tweeter32.png" alt=""></a>
+            <a href="#instagram" class="col-1"><img src="../img/youtube32 .png" alt=""></a>
         </div>
     </footer>
     
