--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -24,10 +24,10 @@
         <nav>
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
-                <li><a href="nosotros.html">Nosotros</a></li>
-                <li><a href="especies.html">Especies</a></li>
-                <li><a href="cuidado.html">Cuidado</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
+                <li><a href="#">Nosotros</a></li>
+                <li><a href="./especies.html">Especies</a></li>
+                <li><a href="./cuidado.html">Cuidado</a></li>
+                <li><a href="./contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
