--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
     <!--link a css-->
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="../css/estilos.css">
     <title>Pagina de Inicio</title>
 </head>
 <body>
@@ -30,11 +30,11 @@
             <h1>Mundo Suculenta</h1>
             <nav>
                 <ul>
-                    <li><a href="index.html">Inicio</a></li>
-                    <li><a href="pages/nosotros.html">Nosotros</a></li>
-                    <li><a href="pages/especies.html">Especies</a></li>
-                    <li><a href="pages/cuidado.html">Cuidado</a></li>
-                    <li><a href="pages/contacto.html">Contacto</a></li>
+                    <li><a href="#">Inicio</a></li>
+                    <li><a href="../pages/nosotros.html">Nosotros</a></li>
+                    <li><a href="../pages/especies.html">Especies</a></li>
+                    <li><a href="../pages/cuidado.html">Cuidado</a></li>
+                    <li><a href="../pages/contacto.html">Contacto</a></li>
                 </ul>
             </nav>
         </header>
@@ -51,19 +51,19 @@
         </main>
 
             <div class="foto1">
-                <img src="img/cactus1.jpg" alt="" class="foto1" width="100" height="100">
+                <img src="../img/cactus1.jpg" alt="" class="foto1" width="100" height="100">
                 <p class="pfoto">Pinches.</p>
             </div>
             <div class="foto2">
-                <img src="img/muchocactus.jpg" alt="" class="foto2" width="100" height="100">
+                <img src="../img/muchocactus.jpg" alt="" class="foto2" width="100" height="100">
                 <p class="pfoto">Muchos cactus.</p>
             </div>
             <div class="foto3">
-                <img src="img/cactus-3809018_1920.jpg" alt="" class="foto3" width="100" height="100">
+                <img src="../img/cactus-3809018_1920.jpg" alt="" class="foto3" width="100" height="100">
                 <p class="pfoto">Cactus.</p>
             </div>
             <div class="foto4">
-                <img src="img/muchasuculentas.jpg" alt="" class="foto4" width="100" height="100">
+                <img src="../img/muchasuculentas.jpg" alt="" class="foto4" width="100" height="100">
                 <p class="pfoto">Muchas suculentas.</p>
             </div>
         
@@ -75,10 +75,10 @@
     <footer class="container-fluid">
         <div class="row">
             <h5 class="col-6">Todos los derechos reservados</h5>
-            <a href="#instagram" class="col-1"><img src="img/instagram32 .png" alt=""></a>
-            <a href="#instagram" class="col-1"><img src="img/face32.png" alt=""></a>
-            <a href="#instagram" class="col-1"><img src="img/tweeter32.png" alt=""></a>
-            <a href="#instagram" class="col-1"><img src="img/youtube32 .png" alt=""></a>
+            <a href="#instagram" class="col-1"><img src="../img/instagram32 .png" alt=""></a>
+            <a href="#instagram" class="col-1"><img src="../img/face32.png" alt=""></a>
+            <a href="#instagram" class="col-1"><img src="../img/tweeter32.png" alt=""></a>
+            <a href="#instagram" class="col-1"><img src="../img/youtube32 .png" alt=""></a>
         </div>
     </footer>
     
