--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
     <!--link a css-->
-    <link rel="stylesheet" href="/css/estilos.css">
+    <link rel="stylesheet" href="../css/estilos.css">
     <title>Pagina de Inicio</title>
 </head>
 <body>
@@ -30,11 +30,11 @@
             <h1>Mundo Suculenta</h1>
             <nav>
                 <ul>
-                    <li><a href="/index.html">Inicio</a></li>
-                    <li><a href="/pages/nosotros.html">Nosotros</a></li>
-                    <li><a href="/pages/especies.html">Especies</a></li>
-                    <li><a href="/pages/cuidado.html">Cuidado</a></li>
-                    <li><a href="/pages/contacto.html">Contacto</a></li>
+                    <li><a href="./index.html">Inicio</a></li>
+                    <li><a href="../pages/nosotros.html">Nosotros</a></li>
+                    <li><a href="../pages/especies.html">Especies</a></li>
+                    <li><a href="../pages/cuidado.html">Cuidados</a></li>
+                    <li><a href="../pages/contacto.html">Contacto</a></li>
                 </ul>
             </nav>
         </header>
@@ -74,7 +74,7 @@
 
     <footer class="container-fluid">
         <div class="row">
-            <h5 class="col-6">Todos los derechos reservados</h5>
+            <h3 class="col-6">Todos los derechos reservados</h3>
             <a href="#instagram" class="col-1"><img src="img/instagram32 .png" alt=""></a>
             <a href="#instagram" class="col-1"><img src="img/face32.png" alt=""></a>
             <a href="#instagram" class="col-1"><img src="img/tweeter32.png" alt=""></a>
