--- a/pages/especies.html
+++ b/pages/especies.html
@@ -17,7 +17,7 @@
         <!-- CSS only -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     
-        <link rel="stylesheet" href="../css/estilos.css">
+        <link rel="stylesheet" href="../css/estilo.css">
         <title>Pagina de Inicio</title>
     </head>
 <body>
@@ -33,51 +33,45 @@
             </ul>
         </nav>
     </header>
+    <div class="container">
 
-    <main class="especies">
-        <h1>Especies de Suculentas</h1>
+        <main class="especies">
+            <h1>Especies de Suculentas</h1>
 
-        <div class="intro">
-            <h2>¿Qué son las plantas suculentas?</h2>
-            <p> Las plantas suculentas, crasas o carnosas destacan por ser especialmente        numerosas.         Actualmente existen más de 8000 especies reconocidas.
-            Su característica principal es que almacenan más agua, principalmente en el tallo, las hojas o las raíces, a diferencia del resto de plantas. Eso provoca que sus tejidos se engrosen, es decir, aumenten su tamaño. Esta característica hace que tengan una mejor adaptación a lugares en los que otros tipos de plantas no resistirían.
-            Al margen de ser más resistentes a la escasez de agua, tienen la piel más dura y su floración es más corta. Además de tener estas capacidades, las plantas suculentas destacan por su inmensa variedad de formas, colores y por unos cuidados muy sencillos, de los que hablaremos al final del artículo.</p>
-        </div>
-        <div class="especie1">
-            <h3>AIZOACEAS</h3>
-            <P>El primero de los tipos de plantas suculentas que vamos a mostrarte son las aizoáceas. Se adaptan estupendamente en zonas desérticas y casi todas sus especies carecen de hojas o su tamaño es pequeño, al igual que sus pétalos.
-            Esta es una adaptación precisa para evitar un exceso de transpiración. Esta familia habita en zonas desérticas de Australia y Sudáfrica y comprende unas 2.000 especies</P>
-            <img src="" alt="">
-        </div>
-        <div class="especie2">
-            <h3>AGAVACEAS</h3>
-            <p>Se trata de una de las familias más conocidas de las plantas crasas o suculentas y las encontramos principalmente en las zonas áridas de México y en el continente americano. Existen alrededor de 300 especies.
-            Este tipo de planta crasa destaca por el gran tamaño de sus hojas puntiagudas en la gran mayoría de casos, además, suelen ser de color verde y de textura fibrosa.
-            Podemos encontrar agaváceas, que son arbustos como las yucas, aunque la más popular es el agave, del cual se elabora el mezcal y el tequila.</p>
-            <img src="" alt="">
-        </div>
-        <div class="especie3">
-            <h3>Cactáceas</h3>
-            <p>Conocidos popularmente como <strong>«cactus»</strong> . Es uno de los tipos de plantas suculentas más numeroso. Destacan por tener espinas que protegen las partes blandas de depredadores y reducen la transpiración.
-            La mayor parte de los cactus habitan en zonas áridas o con poca humedad. Son muy resistentes. Pese a estar rodeados de espinas y crecer en entornos hostiles para la vida, la gran mayoría luce una preciosa y espectacular floración, además de ser perfectos en ámbitos de jardinería decorativa.
-            Los cactus también se usa como alimento, cosmética y medicina. Algunas especies de plantas, concretamente 73, se encuentran en grave peligro de extinción por la destrucción del hábitat, la recolección en exceso y los depredadores. Existen unas 1.300 especies de cactus distintos.
-            </p>
-            <img src="" alt="">
-        </div>
-        <div class="especie4">
-            <h3>Crasuláceas</h3>
-            <p>Cuenta con 1300 especies, casi todas herbáceas o arbustos. Se extienden por todas las partes del mundo, especialmente en zonas secas. Es uno de los tipos de plantas suculentas más fáciles de cultivar y sus distintos tipos de hojas son de lo más curioso. También destacan por la facilidad de reproducción mediante esquejes.</p>
-            <img src="" alt="">
-        </div>
-        <div class="especie5">
-            <h3></h3>
-            <p></p>
-            <img src="" alt="">
-        </div>
-        
-
-
-    </main>
+            <div class="intro">
+                <h2>¿Qué son las plantas suculentas?</h2>
+                <p> Las plantas suculentas, crasas o carnosas destacan por ser especialmente        numerosas.         Actualmente existen más de 8000 especies reconocidas.
+                Su característica principal es que almacenan más agua, principalmente en el tallo, las hojas o las raíces, a diferencia del resto de plantas. Eso provoca que sus tejidos se engrosen, es decir, aumenten su tamaño. Esta característica hace que tengan una mejor adaptación a lugares en los que otros tipos de plantas no resistirían.
+                Al margen de ser más resistentes a la escasez de agua, tienen la piel más dura y su floración es más corta. Además de tener estas capacidades, las plantas suculentas destacan por su inmensa variedad de formas, colores y por unos cuidados muy sencillos, de los que hablaremos al final del artículo.</p>
+            </div>
+            <div class="especie1">
+                <h3>AIZOACEAS</h3>
+                <P>El primero de los tipos de plantas suculentas que vamos a mostrarte son las aizoáceas. Se adaptan estupendamente en zonas desérticas y casi todas sus especies carecen de hojas o su tamaño es pequeño, al igual que sus pétalos.
+                Esta es una adaptación precisa para evitar un exceso de transpiración. Esta familia habita en zonas desérticas de Australia y Sudáfrica y comprende unas 2.000 especies</P>
+                <img src="../img/aizoacea.png" alt="">
+            </div>
+            <div class="especie2">
+                <h3>AGAVACEAS</h3>
+                <p>Se trata de una de las familias más conocidas de las plantas crasas o suculentas y las encontramos principalmente en las zonas áridas de México y en el continente americano. Existen alrededor de 300 especies.
+                Este tipo de planta crasa destaca por el gran tamaño de sus hojas puntiagudas en la gran mayoría de casos, además, suelen ser de color verde y de textura fibrosa.
+                Podemos encontrar agaváceas, que son arbustos como las yucas, aunque la más popular es el agave, del cual se elabora el mezcal y el tequila.</p>
+                <img src="../img/agavacea.png" alt="">
+            </div>
+            <div class="especie3">
+                <h3>Cactáceas</h3>
+                <p>Conocidos popularmente como <strong>«cactus»</strong> . Es uno de los tipos de plantas suculentas más numeroso. Destacan por tener espinas que protegen las partes blandas de depredadores y reducen la transpiración.
+                La mayor parte de los cactus habitan en zonas áridas o con poca humedad. Son muy resistentes. Pese a estar rodeados de espinas y crecer en entornos hostiles para la vida, la gran mayoría luce una preciosa y espectacular floración, además de ser perfectos en ámbitos de jardinería decorativa.
+                Los cactus también se usa como alimento, cosmética y medicina. Algunas especies de plantas, concretamente 73, se encuentran en grave peligro de extinción por la destrucción del hábitat, la recolección en exceso y los depredadores. Existen unas 1.300 especies de cactus distintos.
+                </p>
+                <img src="../img/cactacea.png" alt="">
+            </div>
+            <div class="especie4">
+                <h3>Crasuláceas</h3>
+                <p>Cuenta con 1300 especies, casi todas herbáceas o arbustos. Se extienden por todas las partes del mundo, especialmente en zonas secas. Es uno de los tipos de plantas suculentas más fáciles de cultivar y sus distintos tipos de hojas son de lo más curioso. También destacan por la facilidad de reproducción mediante esquejes.</p>
+                <img src="../img/crasulaceas.png" alt="">
+            </div>
+        </main>
+    </div>
 
 
     <footer class="container-fluid">
