cambios en meta

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content=" Ponete en contacto con nosotros para cualquier sugerencia, duda, ideas y cualquier cosa relacionada con estas maravillosas plantas ">
+    <meta name="keywords" content=" Suculentas, cactus, plantas, jardineria, aloe vera, echeverria, historia, cuidados, contacto">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,24 +21,24 @@
 
     <link rel="stylesheet" href="/css/estilo.css">
 
-    <title>Contacto</title>
+    <title>Contactate Con Nosotros</title>
 </head>
 <body>
-    <header>
+    <header class="titulo">
         <h1>Mundo Suculenta</h1>
-        <nav>
+        <nav class="navegador">
             <ul>
-                <li><a href="/index.html">Inicio</a></li>
-                <li><a href="/pages/nosotros.html">Nosotros</a></li>
-                <li><a href="/pages/especies.html">Especies</a></li>
-                <li><a href="/pages/cuidado.html">Cuidado</a></li>
-                <li><a href="/pages/contacto.html">Contacto</a></li>
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="./nosotros.html">Nosotros</a></li>
+                <li><a href="./especies.html">Especies</a></li>
+                <li><a href="./cuidado.html">Cuidado</a></li>
+                <li><a href="./contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
     <main class="contacto">
         <form action="">
-            <h2>Contacto</h2>
+            <h2>Formulario De Contacto</h2>
             <input type="text" name="Nombre y Apellido" placeholder="Ingresa tu Nombre y Apellido">
             <input type="text" name="Correo Electronico" placeholder="Ingresa tu Dirección de Correo">
             <input type="text" name="Telefono" placeholder="Ingresa Tu Telefono">
