--- a/pages/cuidado.html
+++ b/pages/cuidado.html
@@ -4,6 +4,9 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content=" Nuestro aporte en base a la experiencia sobre como tenes que cuidar tus suculentas, riego, poda y todo lo referente al cuidado de las mismas ">
+        <meta name="keywords" content=" Suculentas, cactus, plantas, jardineria, aloe vera, echeverria, historia, cuidados, riego, poda">
+
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;500&family=Mouse+Memoirs&family=Roboto:wght@100;300&family=Uchen&display=swap" rel="stylesheet">
@@ -17,18 +20,18 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     
         <link rel="stylesheet" href="/css/estilo.css">
-        <title>Pagina de Inicio</title>
+        <title>Cuidado De Tus Plantas</title>
     </head>
 <body>
-    <header>
+    <header class="titulo">
         <h1>Mundo Suculenta</h1>
-        <nav>
+        <nav class="navegador">
             <ul>
-                <li><a href="/index.html">Inicio</a></li>
-                <li><a href="/pages/nosotros.html">Nosotros</a></li>
-                <li><a href="/pages/especies.html">Especies</a></li>
-                <li><a href="/pages/cuidado.html">Cuidado</a></li>
-                <li><a href="/pages/contacto.html">Contacto</a></li>
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="./nosotros.html">Nosotros</a></li>
+                <li><a href="./especies.html">Especies</a></li>
+                <li><a href="./cuidado.html">Cuidado</a></li>
+                <li><a href="./contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
