--- a/pages/especies.html
+++ b/pages/especies.html
@@ -24,18 +24,39 @@
         <title>Especies de Suculentas</title>
     </head>
 <body>
-    <header class="titulo">
-        <h1>Mundo Suculenta</h1>
-        <nav class="navegador">
-            <ul>
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="./nosotros.html">Nosotros</a></li>
-                <li><a href="./especies.html">Especies</a></li>
-                <li><a href="./cuidado.html">Cuidado</a></li>
-                <li><a href="./contacto.html">Contacto</a></li>
-            </ul>
+    
+    <header class="head-nav">
+        <div class="titulo">
+            <h1>Mundo Suculenta</h1>
+        </div>
+        <nav class="navbar navbar-expand-md">
+            <div class="container-fluid">
+                <a href="../index.html">
+                    <img class="logo" src="../img/logopshop.png" alt="logo" width="100">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="./nosotros.html">Nosotros</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./especies.html">Especies</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./cuidado.html">Cuidados</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./contacto.html">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
-    </header>
+    </header>  
+
     <div class="container">
 
         <main class="container-main text-center">
@@ -92,13 +113,10 @@
     </div>
 
 
-    <footer class="container-fluid">
-        <div class="row">
-            <h3 class="col-6">Todos los derechos reservados</h3>
-            <a href="#instagram" class="col-1"><img src="../img/instagram32 .png" alt=""></a>
-            <a href="#instagram" class="col-1"><img src="../img/face32.png" alt=""></a>
-            <a href="#instagram" class="col-1"><img src="../img/tweeter32.png" alt=""></a>
-            <a href="#instagram" class="col-1"><img src="../img/youtube32 .png" alt=""></a>
+    <!--footer-->
+    <footer>
+        <div>
+            <p class="p-foot">Copyright - Todos Los Derechos Reservados</p>
         </div>
     </footer>
     
