--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
     <!--link a css-->
-    <link rel="stylesheet" href="./css/estilos.css">
+    <link rel="stylesheet" href="css/estilos.css">
     <title>Mundo suculentas home</title>
 </head>
 
@@ -35,7 +35,7 @@
             </div>
             <nav class="navbar navbar-expand-md">
                 <div class="container-fluid">
-                    <a href="./index.html">
+                    <a href="index.html">
                         <img class="logo" src="./img/logopshop.png" alt="logo" width="100">
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
