--- a/index.html
+++ b/index.html
@@ -74,19 +74,19 @@
 
         <div class="cajadefotos">
             <div class="foto1">
-                <img src="../img/cactus1.jpg" alt="" class="foto1" width="100" height="100">
+                <img src="./img/cactus1.jpg" alt="" class="foto1" width="100" height="100">
                 <p class="pfoto">Pinches.</p>
             </div>
             <div class="foto2">
-                <img src="../img/muchocactus.jpg" alt="" class="foto2" width="100" height="100">
+                <img src="./img/muchocactus.jpg" alt="" class="foto2" width="100" height="100">
                 <p class="pfoto">Muchos cactus.</p>
             </div>
             <div class="foto3">
-                <img src="../img/cactus-3809018_1920.jpg" alt="" class="foto3" width="100" height="100">
+                <img src="./img/cactus-3809018_1920.jpg" alt="" class="foto3" width="100" height="100">
                 <p class="pfoto">Cactus.</p>
             </div>
             <div class="foto4">
-                <img src="../img/muchasuculentas.jpg" alt="" class="foto4" width="100" height="100">
+                <img src="./img/muchasuculentas.jpg" alt="" class="foto4" width="100" height="100">
                 <p class="pfoto">Muchas suculentas.</p>
             </div>
         </div>
