--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -19,7 +19,7 @@
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="/css/estilos.css">
+    <link rel="stylesheet" href="../css/estilos.css">
 
     <title>Contactate Con Nosotros</title>
 </head>
@@ -57,6 +57,8 @@
         </nav>
     </header>  
 
+    <!--formulario de contacto-->
+
     <main class="contacto">
         <form action="">
             <h2>Formulario De Contacto</h2>
@@ -76,10 +78,7 @@
             <p class="p-foot">Copyright - Todos Los Derechos Reservados</p>
         </div>
     </footer>
-
-    </div>
-
-
+    
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>    
 
