--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content=" Mundo Suculenta es una pagina informativa, en este proyecto vas a encontrar la historia de estas antiquisimas plantas y todo lo referido a ellas ">
-    <meta name="keywords" content=" Suculentas, cactus, plantas, jardineria, aloe vera, echeverria, historia, cuidados">
+    <meta name="keywords" content=" Suculentas,  plantas, jardineria, historia, cuidados">
 
-    <!--google fonts-->
+    <!--enlace a google fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;500&family=Mouse+Memoirs&family=Roboto:wght@100;300&family=Uchen&display=swap" rel="stylesheet">
@@ -19,16 +19,16 @@
     font-family: 'Uchen', serif;
     -->
 
-    <!-- CSS only -->
+    <!-- enlace a bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
-    <!--link a css-->
+    <!--enlace a css-->
     <link rel="stylesheet" href="../css/estilos.css">
     <title>Mundo suculentas home</title>
 </head>
 
 <body>
-        <!--titulo de pag y navegador-->
+        <!--titulo y navegador-->
         <header class="head-nav">
             <div class="titulo">
                 <h1 class="titulo-h1">Mundo Suculenta</h1>
