--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,29 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content=" Ponete en contacto con nosotros para cualquier sugerencia, duda, ideas y cualquier cosa relacionada con estas maravillosas plantas ">
-    <meta name="keywords" content=" Suculentas, cactus, plantas, jardineria, aloe vera, echeverria, historia, cuidados, contacto">
+    <meta name="keywords" content=" Suculentas, cactus, plantas, jardineria, contacto">
 
+    <!--enlace a google fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;500&family=Mouse+Memoirs&family=Roboto:wght@100;300&family=Uchen&display=swap" rel="stylesheet">
 
-    <!--font-family: 'Montserrat', sans-serif;
-    font-family: 'Mouse Memoirs', sans-serif;
-    font-family: 'Roboto', sans-serif;
-    font-family: 'Uchen', serif;-->
+    <!--    font-family: 'Montserrat', sans-serif;
+            font-family: 'Mouse Memoirs', sans-serif;
+            font-family: 'Roboto', sans-serif;
+            font-family: 'Uchen', serif;                  -->
 
-    <!-- CSS only -->
+    <!-- enlace a bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
+    <!--enlace a css-->
     <link rel="stylesheet" href="/css/estilos.css">
 
     <title>Contactate Con Nosotros</title>
+    
 </head>
 <body>
     
+    <!--titulo y navegador-->
+
     <header class="head-nav">
         <div class="titulo">
-            <h1>Mundo Suculenta</h1>
+            <h1 class="titulo-h1">Mundo Suculenta</h1>
         </div>
         <nav class="navbar navbar-expand-md">
             <div class="container-fluid">
@@ -56,6 +61,8 @@
             </div>
         </nav>
     </header>  
+
+    <!--Formulario de contacto-->
 
     <main class="contacto">
         <form action="">
