retoque de fotos

--- a/pages/cuidado.html
+++ b/pages/cuidado.html
@@ -83,7 +83,7 @@
 
             <p class="p-cuidado">De acuerdo con la filosofía del Feng Shui, las suculentas y cactus son ideales para atraer la buena suerte, ya que estas ayudan a equilibrar la energía y el Chi en cualquier espacio, mejorando el flujo de la energía positiva en casa. Según la forma de sus hojas, flores, su aroma y longevidad, estas plantas generan energía al captar los rayos del sol para hacer la fotosíntesis, lo cual se conoce como energía Yang y se transforma en energía Ying por medio de este proceso, trayendo vitalidad, armonía y abundancia.
             </p>
-            <img src="../img/cactuscocina.jpg" alt="cocina feng shui"
+            <img src="../img/cuidados-cocina.png" alt="cocina feng shui"
             class="img-feng">
         </div>
 
@@ -109,7 +109,7 @@
             <div class="feng-tipos">
                 <h3 class="enc-cuidado">Crassula Portulacaria Afra</h3>
 
-                <img src="../img/cuidados-ovata.png" alt="macetas" class="img-cuidado-izquierda">
+                <img src="../img/cuidados-portularia.png" alt="macetas" class="img-cuidado-izquierda">
 
                 <p class="p-cuidado">Atrae la abundancia y el dinero, la alegría y la buena suerte, ya sea en casa o en el trabajo. Por ello, se debe
                 colocar en espacios con luz indirecta.
@@ -120,7 +120,7 @@
 
                 <h3 class="enc-cuidado">Crasulla Ovata</h3>
 
-                <img src="../img/cuidados-ovata2.png" alt="macetas" class="img-cuidado-derecha">
+                <img src="../img/cuidados-ovata.png" alt="macetas" class="img-cuidado-derecha">
 
                 <p class="p-cuidado">También conocida como jade, esta planta atrae la prosperidad, riqueza y abundancia, es longeva y generalmente se
                 coloca en espacios con semi sombra, ya sea ene interiores o exteriores.
@@ -130,7 +130,7 @@
             <div class="feng-tipos">
 
                 <h3 class="enc-cuidado">Echeveria</h3>
-                <img src="../img/cuidados-echeverria1.png" alt="Foto suculenta echeverria" class="img-cuidado-izquierda">
+                <img src="../img/cuidados-echeverria.png" alt="Foto suculenta echeverria" class="img-cuidado-izquierda">
                 <p class="p-cuidado">Esta plata de hojas carnosas es un símbolo de protección en el hogar, además de atraer la armonía. Por ello, se
                 puede colocar tanto en interiores como exteriores.
                 </p>
@@ -139,7 +139,7 @@
             <div class="feng-tipos">
 
                 <h3 class="enc-cuidado">Sábila</h3>
-                <img src="../img/cuidados-aloe 2.png" alt="foto aloe vera" class="img-cuidado-derecha">
+                <img src="../img/cuidados-aloe.png" alt="foto aloe vera" class="img-cuidado-derecha">
                 <p class="p-cuidado">También conocida como aloe, esta planta ayuda a alejar las malas vibras y a proteger la casa, por lo que suele colocarse en el exterior o en la entrada de visitas.
                 </p>
             </div>
@@ -147,7 +147,7 @@
             <div class="feng-tipos">
 
                 <h3 class="enc-cuidado">Cactus</h3>
-                <img src="../img/cuidados-cactus1.jpg.png" alt="cactus en maceta" class="img-cuidado-izquierda">
+                <img src="../img/cuidados-cactus.png" alt="cactus en maceta" class="img-cuidado-izquierda">
                 <p class="p-cuidado">Los cactus en general son considerados amuleto de fuerza y protección, ya que sus espinas ahuyentan las energías negativas. Por ello, se colocan en lugares abiertos, ventanas, balcones y terrazas.
                 </p>
             </div>
