--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -76,13 +76,13 @@
         <!-- aside nosotros barra lateral -->
         <aside class="aside-nos">
             <div class="nos-foto">
-                <img src="../img/nos-foto 4.png" alt="cactus"  class="foto-aside">
+                <img src="../img/nos-invernadero.png" alt="cactus"  class="foto-aside">
             </div>
             <div class="nos-foto">
-                <img src="../img/nos-foto 2.png" alt="cactus" class="foto-aside">
+                <img src="../img/nos-cactus-mini.png" alt="cactus" class="foto-aside">
             </div>
             <div class="nos-foto">
-                <img src="../img/nos-foto 3.png" alt="cactus"  class="foto-aside">
+                <img src="../img/nos-echeverrias.png" alt="cactus"  class="foto-aside">
             </div>
         </aside>
     </div>
