--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
     <!--enlace a css-->
-    <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="stylesheet" href="./css/estilos.css">
     <title>Mundo suculentas home</title>
 </head>
 
@@ -35,7 +35,7 @@
             <nav class="navbar navbar-expand-md">
                 <div class="container-fluid">
                     <a href="./index.html">
-                        <img class="logo" src="../img/logopshop.png" alt="logo" width="100">
+                        <img class="logo" src="./img/logopshop.png" alt="logo" width="100">
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -74,7 +74,7 @@
     <section class="index-cajadefotos">
 
         <div class="card-index-foto">
-            <img src="/img/index echeverria2.jpg.png" alt="" class="card-foto">
+            <img src="./img/index-echeverria.png" alt="" class="card-foto">
             <div class="intro-index-foto">
                 <h3 class="card-titulo">
                 Echeverria</h3>
@@ -82,7 +82,7 @@
         </div>
 
         <div class="card-index-foto">
-            <img src="/img/index aloe 1.png" alt="" class="card-foto">
+            <img src="./img/index-aloe.png" alt="" class="card-foto">
             <div class="intro-index-foto">
                 <h3 class="card-titulo">
                 Aloe Vera</h3>
@@ -90,7 +90,7 @@
         </div>
 
         <div class="card-index-foto">
-            <img src="/img/index-portulacaria.png" alt="" class="card-foto">
+            <img src="./img/index-portulacaria.png" alt="" class="card-foto">
             <div class="intro-index-foto">
                 <h3 class="card-titulo">
                 Portulacaria</h3>
@@ -98,7 +98,7 @@
         </div>
 
         <div class="card-index-foto">
-            <img src="/img/index-cactus.png" alt="" class="card-foto">
+            <img src="./img/index-cactus.png" alt="" class="card-foto">
             <div class="intro-index-foto">
                 <h3 class="card-titulo">
                 Cactus</h3>
