--- a/pages/cuidado.html
+++ b/pages/cuidado.html
@@ -25,7 +25,7 @@
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
     <!--enlace a css-->
-    <link rel="stylesheet" href="/css/estilos.css">
+    <link rel="stylesheet" href="../css/estilos.css">
 
     <title>Cuidado De Tus Plantas</title>
 </head>
@@ -109,7 +109,7 @@
             <div class="feng-tipos">
                 <h3 class="enc-cuidado">Crassula Portulacaria Afra</h3>
 
-                <img src="../img/cuidados-portularia.png" alt="macetas" class="img-cuidado-izquierda">
+                <img src="../img/cuidados-portularia.png" alt="foto de suculenta portularia" class="img-cuidado-izquierda">
 
                 <p class="p-cuidado">Atrae la abundancia y el dinero, la alegría y la buena suerte, ya sea en casa o en el trabajo. Por ello, se debe
                 colocar en espacios con luz indirecta.
@@ -120,7 +120,7 @@
 
                 <h3 class="enc-cuidado">Crasulla Ovata</h3>
 
-                <img src="../img/cuidados-ovata.png" alt="macetas" class="img-cuidado-derecha">
+                <img src="../img/cuidados-ovata.png" alt="foto de suculenta ovata" class="img-cuidado-derecha">
 
                 <p class="p-cuidado">También conocida como jade, esta planta atrae la prosperidad, riqueza y abundancia, es longeva y generalmente se
                 coloca en espacios con semi sombra, ya sea ene interiores o exteriores.
@@ -147,7 +147,7 @@
             <div class="feng-tipos">
 
                 <h3 class="enc-cuidado">Cactus</h3>
-                <img src="../img/cuidados-cactus.png" alt="cactus en maceta" class="img-cuidado-izquierda">
+                <img src="../img/cuidados-cactus.png" alt="foto de cactus" class="img-cuidado-izquierda">
                 <p class="p-cuidado">Los cactus en general son considerados amuleto de fuerza y protección, ya que sus espinas ahuyentan las energías negativas. Por ello, se colocan en lugares abiertos, ventanas, balcones y terrazas.
                 </p>
             </div>
