--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -22,7 +22,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
         <!-- enlace a css -->
-        <link rel="stylesheet" href="/css/estilos.css">
+        <link rel="stylesheet" href="../css/estilos.css">
 
         <title>Quienes Somos</title>
     </head>
@@ -76,13 +76,13 @@
         <!-- aside nosotros barra lateral -->
         <aside class="aside-nos">
             <div class="nos-foto">
-                <img src="../img/nos-invernadero.png" alt="cactus"  class="foto-aside">
+                <img src="../img/nos-invernadero.png" alt="foto de invernadero"  class="foto-aside">
             </div>
             <div class="nos-foto">
-                <img src="../img/nos-cactus-mini.png" alt="cactus" class="foto-aside">
+                <img src="../img/nos-cactus-mini.png" alt="foto de varios cactus" class="foto-aside">
             </div>
             <div class="nos-foto">
-                <img src="../img/nos-echeverrias.png" alt="cactus"  class="foto-aside">
+                <img src="../img/nos-echeverrias.png" alt="foto de suculenta echeverria"  class="foto-aside">
             </div>
         </aside>
     </div>
